# tmail-wrapper

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
tests/: test_client.py
tmail-py/: client.py
tmailpy/: cli.py  client.py
